sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:2: error: Missing closing brace `}' assumed here
def selectionSort() {
^AlgSelectionSort:2: error: expected class or object definition
def selectionSort() {
^