sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var long= getNombreValeurs
  
  for (i <- 1 to long-1 ){
    min = i
    for (j <- i to long ){
      if (getValeur(j)>getValeur(i)){
        min= j 
      }
    }
  }